@@ -1,8 +1,12 @@
 -server
 -Xmx2G
+-XX:-UseBiasedLocking
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+-XX:ReservedCodeCacheSize=512M
+-Djdk.nio.maxCachedBufferSize=0
+-Djdk.attach.allowAttachSelf=true
